spacing issues fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,7 +212,7 @@ transition: 0.3s ease-in-out;
 
 /*-----------------contact---------------------------*/
 .contact-form-container {
-    margin-top: 200px;
+    margin-top: 150px;
     margin-bottom: 80px;
     max-width: 875px
 } 
